--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -1,18 +1,18 @@
 :root {
 	--container-width: 1600px;
-	--container-padding: 15px;
+	--container-padding: 100px;
 
 	--font-main: sans-serif;
-	--font-accent: "Inter", sans-serif;
-	--font-second: "Impact", sans-serif;
+	--font-accent: "Neue", sans-serif;
+	--font-second: "Inter", sans-serif;
 	--font-titles: var(--font-accent);
 
 	--page-bg: #FFF;
-	--text-color: #FFF;
-	--text-color-dark: #7C0000;
-	--accent: #7C0000;
-	--accent-dark: #000;
-	--accent-light: rgba(124, 0, 0, 0.2);
+	--text-color: #f7f6f2;
+	--text-color-dark: #121212;
+	--accent: #FFE26A;
+	--accent-dark: #121212;
+	--accent-light: #0F6DA7;
 	--link-color: #7C0000;
 
 
