--- a/src/scss/blocks/_hero.scss
+++ b/src/scss/blocks/_hero.scss
@@ -8,8 +8,7 @@
 	overflow: hidden;
 
 	.container {
-		padding: 150px 0 200px 0;
-		padding-bottom: 0px;
+		padding: 150px 100px 200px 100px;
 		background-color: var(--accent);
 		background-color: #999;
 		background-image: url('../../img/hero/hero.jpg');
@@ -30,5 +29,10 @@
 		text-transform: uppercase;
 		text-align: center;
 		color: var(--text-color);
+		margin-bottom: 60px;
+	}
+
+	.main__button {
+		margin-bottom: 300px;
 	}
 }
