--- a/src/scss/blocks/_mobile-nav.scss
+++ b/src/scss/blocks/_mobile-nav.scss
@@ -1,23 +1,27 @@
 .mobile-nav {
 	position: fixed;
-	top: 0;
-	right: -100%;
+	top: 50%;
+	right: -150%;
 	width: 100%;
-	height: 100%;
+	height: 88%;
+	transform: translate(0%, -50%);
 	z-index: 99;
+
+	padding: 40px 10px;
 
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	background: var(--accent);
+	align-items: flex-start;
+	justify-content: flex-start;
+	background: var(--page-bg);
 	transition: all 0.2s ease-in;
+	border-radius: 40px;
 
 	.border_wrapper {
-		padding: 10px;
 		background-color: var(--page-bg);
-		width: calc(100% - 20px);
-		max-width: 469px;
+		width: 100%;
+		max-width: 100%;
+		margin-bottom: 40px;
 	}
 }
 
@@ -27,10 +31,7 @@
 
 .mobile-nav li {
 	width: 100%;
-	height: 50px;
 	display: flex;
-	align-items: center;
-	justify-content: center;
 	border-bottom: 1px solid rgba(255, 177, 22, 0.2);
 
 	&:first-child {
@@ -65,15 +66,23 @@
 }
 
 .mobile-nav__list {
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	font-size: 28px;
 	background-color: var(--page-bg);
-	border: 1px solid rgba(124, 0, 0, 0.6);
-	padding: 10px 20px;
+	// border: 1px solid rgba(124, 0, 0, 0.6);
 
 	// & .active {
 	// 	opacity: 0.5;
 	// }
+
+	& li:first-child {
+		border-top: 1px solid rgba(18, 18, 18, 0.2);
+	}
+
+	& li:last-child {
+		border-bottom: 1px solid rgba(18, 18, 18, 0.2);
+	}
 }
