--- a/src/scss/blocks/_nav.scss
+++ b/src/scss/blocks/_nav.scss
@@ -81,11 +81,11 @@
 .no-scroll .nav__link {
 	transition: all 0.2s ease-in;
 	position: relative;
-	padding: 4px;
+	padding: 15px 0;
 
-	font-weight: 600;
-	font-size: 25px;
-	line-height: 100%;
-	letter-spacing: -0.04em;
+	font-weight: 500;
+	font-size: 20px;
+	line-height: 105%;
+	text-transform: uppercase;
 	color: var(--text-color-dark);
 }
