--- a/src/scss/blocks/_about.scss
+++ b/src/scss/blocks/_about.scss
@@ -18,14 +18,21 @@
 			font-size: 25px;
 			line-height: 105%;
 			margin-bottom: 10px;
+
+			@include tablet_small {
+				grid-column: 1 / -1;
+			}
 		}
 	}
 
 	.cards {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
-
 		grid-column: 3 / -1;
+
+		@include tablet_small {
+			grid-column: 1 / -1;
+		}
 	}
 
 	.card {
