--- a/src/scss/blocks/_contacts.scss
+++ b/src/scss/blocks/_contacts.scss
@@ -101,7 +101,7 @@
 		flex-direction: column;
 		color: var(--text-color-dark);
 
-		@include media_900 {
+		@include tablet_small {
 			flex-direction: column;
 			margin-top: 0px;
 		}
@@ -116,7 +116,7 @@
 				border-bottom: 1px solid #7c0000;
 			}
 
-			@include media_900 {
+			@include tablet_small {
 				flex-direction: column;
 				align-items: center;
 				margin-top: 0px;
