--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -65,7 +65,7 @@
 	letter-spacing: -0.04em;
 	color: rgba(124, 0, 0, 0.5);
 
-	@include media_900 {
+	@include tablet_small {
 		margin-top: 30px;
 	}
 }
