--- a/src/scss/blocks/_about.scss
+++ b/src/scss/blocks/_about.scss
@@ -7,6 +7,13 @@
 	border-top-right-radius: 100px;
 	margin-top: -250px;
 
+	@include mobile {
+		border-top-left-radius: 30px;
+		border-top-right-radius: 30px;
+		padding-top: 50px;
+		margin-top: -150px;
+	}
+
 	.content {
 		display: grid;
 		grid-template-columns: repeat(4, 1fr);
@@ -22,6 +29,10 @@
 			@include tablet_small {
 				grid-column: 1 / -1;
 			}
+
+			@include mobile {
+				font-size: 16px;
+			}
 		}
 	}
 
@@ -33,6 +44,11 @@
 		@include tablet_small {
 			grid-column: 1 / -1;
 		}
+
+		@include mobile_small {
+			display: flex;
+			flex-direction: column;
+		}
 	}
 
 	.card {
@@ -40,8 +56,21 @@
 		border-bottom: 1px solid rgba(18, 18, 18, 0.4);
 		max-width: 95%;
 
+		@include mobile {
+			padding: 15px 0;
+		}
+
 		&:last-child {
 			max-width: 100%;
+
+			@include mobile_small {
+				display: flex;
+				flex-direction: column;
+			}
+		}
+
+		&-last {
+			border: none;
 		}
 
 		&__title {
@@ -49,6 +78,10 @@
 			font-size: 40px;
 			line-height: 105%;
 			margin-bottom: 4px;
+
+			@include mobile {
+				font-size: 30px;
+			}
 		}
 
 		&__text {
@@ -56,6 +89,10 @@
 			font-size: 16px;
 			line-height: 105%;
 			color: rgba(18, 18, 18, 0.4);
+
+			@include mobile {
+				font-size: 14px;
+			}
 		}
 	}
 }
@@ -63,6 +100,11 @@
 .title__wrapper {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
+
+	@include mobile {
+		display: flex;
+		flex-direction: column;
+	}
 }
 
 .title {
@@ -81,7 +123,6 @@
 	@include mobile {
 		font-size: 30px;
 		margin-bottom: 20px;
-		padding: 10px 10px;
 	}
 }
 
@@ -98,5 +139,11 @@
 		font-size: 20px;
 		line-height: 100%;
 		text-transform: uppercase;
+
+		@include mobile {
+			font-size: 12px;
+			padding: 5px 20px;
+			margin-bottom: 10px;
+		}
 	}
 }
