--- a/src/scss/blocks/_icons.scss
+++ b/src/scss/blocks/_icons.scss
@@ -11,25 +11,29 @@
 	height: 24px;
 }
 
-.icon--icon_facebook,
-.icon--icon_instagram,
-.icon--icon_son,
-.icon--icon_x {
-	fill: var(--accent-dark);
-	stroke: var(--accent-dark);
+.icon--icon_cap,
+.icon--icon_desk,
+.icon--icon_message {
+	fill: var(--text-color-dark);
+	stroke: var(--text-color-dark);
+	width: 76px;
+	height: 76px;
+
+	@include mobile {
+		width: 40px;
+		height: 40px;
+	}
 }
 
-.icon--icon_download {
-	fill: var(--accent);
-	stroke: var(--accent);
-	width: 15px;
-	height: 15px;
-	opacity: 0.6;
-	transition: all 0.2s ease-in;
-	cursor: pointer;
-	margin-left: 10px;
+.icon--icon_i,
+.icon--icon_shield {
+	stroke: var(--text-color-dark);
+	width: 76px;
+	height: 76px;
+	color: var(--text-color-dark);
 
-	&:hover {
-		opacity: 1;
+	@include mobile {
+		width: 40px;
+		height: 40px;
 	}
 }
