--- a/src/scss/blocks/_titles.scss
+++ b/src/scss/blocks/_titles.scss
@@ -25,3 +25,54 @@
 	font-weight: 700;
 	font-family: var(--font-titles);
 }
+
+.title__wrapper {
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+
+	@include mobile {
+		display: flex;
+		flex-direction: column;
+	}
+}
+
+.title {
+	grid-column: 2 / -1;
+	position: relative;
+	font-weight: 500;
+	font-size: 55px;
+	line-height: 105%;
+	text-transform: uppercase;
+	color: #121212;
+	color: var(--text-color-dark);
+	width: fit-content;
+	// white-space: nowrap;
+	margin-bottom: 40px;
+
+	@include mobile {
+		font-size: 30px;
+		margin-bottom: 20px;
+	}
+}
+
+.subtitle {
+	grid-column: 1 / 2;
+
+	& span {
+		display: inline-block;
+		border-radius: 100px;
+		border: 1px solid var(--text-color-dark);
+		color: var(--text-color-dark);
+		padding: 10px 20px;
+		font-weight: 500;
+		font-size: 20px;
+		line-height: 100%;
+		text-transform: uppercase;
+
+		@include mobile {
+			font-size: 12px;
+			padding: 5px 20px;
+			margin-bottom: 10px;
+		}
+	}
+}
