--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -1,27 +1,28 @@
 .footer {
 	font-family: var(--font-accent);
 	margin-top: auto;
-	background-color: var(--page-bg);
+	background-color: var(--text-color-dark);
 	padding: 0;
-	color: var(--text-color-dark);
+	max-width: 1600px;
+	border-top-left-radius: 90px;
+	border-top-right-radius: 90px;
+	margin: 0 auto;
+	color: var(--text-color);
+	padding: 50px 100px;
 
 	.footer__title {
 		display: flex;
 		align-items: center;
 		justify-content: center;
 		justify-content: flex-start;
-		white-space: nowrap;
-		margin-top: -2%;
 		margin-bottom: 20px;
 		width: 100%;
 		height: 100%;
-		font-weight: 700;
-		font-size: 212px;
-		font-size: clamp(40px, 13.3vw, 214px);
-		line-height: 100%;
-		letter-spacing: -0.04em;
-		text-transform: lowercase;
-		color: var(--text-color-dark);
+		font-weight: 500;
+		font-size: 55px;
+		line-height: 105%;
+		text-transform: uppercase;
+		color: var(--text-color);
 
 		@include tablet {
 			margin-bottom: 0px;
@@ -30,13 +31,21 @@
 		}
 	}
 
+	.footer__subtitle {
+		font-weight: 500;
+		font-size: 25px;
+		line-height: 105%;
+		color: rgba(247, 246, 242, 0.6);
+		max-width: 440px;
+	}
+
 	.footer__link {
 		display: inline-block;
 		font-weight: 500;
 		font-size: 16px;
 		line-height: 100%;
 		letter-spacing: -0.04em;
-		color: var(--text-color-dark);
+		color: var(--text-color);
 		white-space: nowrap;
 
 		&-logo {
