--- a/src/scss/blocks/_titles.scss
+++ b/src/scss/blocks/_titles.scss
@@ -50,13 +50,15 @@
 	margin-bottom: 40px;
 
 	@include mobile {
-		font-size: 30px;
+		font-size: 20px;
 		margin-bottom: 20px;
 	}
 }
 
 .subtitle {
 	grid-column: 1 / 2;
+	margin-right: 10px;
+	white-space: nowrap;
 
 	& span {
 		display: inline-block;
@@ -71,7 +73,7 @@
 
 		@include mobile {
 			font-size: 12px;
-			padding: 5px 20px;
+			padding: 5px 10px;
 			margin-bottom: 10px;
 		}
 	}
