--- a/src/scss/blocks/how.scss
+++ b/src/scss/blocks/how.scss
@@ -109,5 +109,33 @@
 		}
 	}
 
+	.how {
+		&__bg_wrapper {
+			position: relative;
+			width: 100%;
+			overflow: hidden;
+			border-radius: 90px;
+			aspect-ratio: 16/9;
+			margin-top: 150px;
+
+			@include tablet {
+				margin-top: 100px;
+			}
+
+			@include mobile {
+				aspect-ratio: 4/3.2;
+				border-radius: 30px;
+				margin-top: 60px;
+			}
+		}
+
+		&__bg {
+			position: absolute;
+			inset: 0;
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
 
 }
