--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -9,6 +9,14 @@
 	margin: 0 auto;
 	color: var(--text-color);
 	padding: 50px 100px;
+	padding-bottom: 0px;
+
+	@include mobile {
+		padding: 30px 10px;
+		padding-bottom: 0px;
+		border-top-left-radius: 30px;
+		border-top-right-radius: 30px;
+	}
 
 	.footer__title {
 		display: flex;
@@ -24,10 +32,9 @@
 		text-transform: uppercase;
 		color: var(--text-color);
 
-		@include tablet {
-			margin-bottom: 0px;
-			justify-content: flex-start;
-			font-size: clamp(40px, 13.2vw, 214px);
+		@include mobile {
+			font-size: 20px;
+			margin-bottom: 10px;
 		}
 	}
 
@@ -37,21 +44,30 @@
 		line-height: 105%;
 		color: rgba(247, 246, 242, 0.6);
 		max-width: 440px;
+		padding-bottom: 50px;
+
+		@include mobile {
+			font-size: 16px;
+			padding-bottom: 25px;
+		}
 	}
 
 	.footer__link {
 		display: inline-block;
 		font-weight: 500;
 		font-size: 16px;
-		line-height: 100%;
-		letter-spacing: -0.04em;
-		color: var(--text-color);
+		line-height: 105%;
+		color: rgba(247, 246, 242, 0.6);
 		white-space: nowrap;
 
 		&-logo {
 			font-weight: 600;
 			font-size: 44px;
 			color: var(--test-color-dark);
+		}
+
+		@include mobile {
+			font-size: 14px;
 		}
 	}
 
@@ -61,42 +77,80 @@
 }
 
 .footer__copyright {
-	margin-top: 50px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+	margin-top: 30px;
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
 	width: 100%;
 	padding: 10px 0;
-	text-align: center;
-	font-weight: 400;
-	font-size: 12px;
-	line-height: 100%;
-	letter-spacing: -0.04em;
-	color: rgba(124, 0, 0, 0.5);
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 105%;
+	text-transform: uppercase;
+	color: rgba(247, 246, 242, 0.6);
+	white-space: nowrap;
 
 	@include tablet_small {
 		margin-top: 30px;
+	}
+
+	@include mobile {
+		font-size: 12px;
+	}
+
+	& span {
+		padding: 4px;
+		margin-left: -4px;
+	}
+
+	& .footer__link {
+		grid-column: 4;
+		width: fit-content;
+		display: inline-block;
+		font-weight: 500;
+		font-size: 14px;
+		line-height: 105%;
+		text-transform: uppercase;
+		color: rgba(247, 246, 242, 0.6);
+		padding: 4px;
+		margin-left: -4px;
+
+		&:hover {
+			color: var(--text-color);
+		}
+
+		@include tablet {
+			justify-self: end;
+		}
+
+		@include mobile {
+			font-size: 12px;
+		}
 	}
 }
 
 .footer__links {
 	display: grid;
 	column-gap: 0px;
-	grid-template-columns: repeat(10, 1fr);
+	grid-template-columns: repeat(4, 1fr);
 
 	.main {
 		row-gap: 0px;
 		grid-column: 1 / -1;
+		padding-top: 50px;
+		border-top: 1px solid rgba(247, 246, 242, 0.6);
+
+		@include mobile {
+			padding-top: 25px;
+		}
 
 		& li {
 			display: flex;
 			align-items: flex-start;
 
 			&:nth-child(1) {
-				grid-column: 1 / 3;
-				grid-row: 1 / -1;
+				grid-column: 1 / 2;
+				grid-row: 1 / 5;
 				margin-left: 0;
-				height: 10px;
 				margin-left: -4px;
 			}
 
@@ -112,40 +166,48 @@
 			}
 
 			&:nth-child(4) {
-				grid-column: 5;
+				grid-column: 4;
+				grid-row: 1;
 				margin-left: -4px;
 			}
 
 			&:nth-child(5) {
-				grid-column: 5;
+				grid-column: 4;
 				grid-row: 2;
 				margin-left: -4px;
 			}
 
 			&:nth-child(6) {
-				grid-column: 7;
-				grid-row: 1;
+				grid-column: 4;
+				grid-row: 3;
 				justify-self: start;
 				margin-left: -4px;
 			}
 
 			&:nth-child(7) {
-				grid-column: 7;
-				grid-row: 2;
-				justify-self: start;
+				grid-column: 4;
+				grid-row: 1;
+				justify-self: end;
 				margin-left: -4px;
 			}
 
 			&:nth-child(8) {
-				grid-column: 10;
-				grid-row: 1;
+				grid-column: 4;
+				grid-row: 2;
 				justify-self: end;
 				margin-right: -4px;
 			}
 
 			&:nth-child(9) {
-				grid-column: 10;
-				grid-row: 2;
+				grid-column: 4;
+				grid-row: 3;
+				justify-self: end;
+				margin-right: -4px;
+			}
+
+			&:nth-child(10) {
+				grid-column: 4;
+				grid-row: 4;
 				justify-self: end;
 				margin-right: -4px;
 			}
@@ -156,31 +218,38 @@
 					margin-bottom: 50px;
 					grid-column: 1 / 3;
 					grid-row: 1;
+					margin-left: 0;
 				}
 
 				&:nth-child(2) {
 					grid-column: 1 / 3;
 					grid-row: 2;
+					margin-left: 0;
 				}
 
 				&:nth-child(3) {
 					grid-column: 1 / 3;
 					grid-row: 3;
+					margin-left: 0;
 				}
 
 				&:nth-child(4) {
 					grid-column: 1 / 3;
 					grid-row: 4;
+					padding-top: 11px;
+					margin-left: 0;
 				}
 
 				&:nth-child(5) {
 					grid-column: 1 / 3;
 					grid-row: 5;
+					margin-left: 0;
 				}
 
 				&:nth-child(6) {
 					grid-column: 1 / 3;
 					grid-row: 6;
+					margin-left: 0;
 				}
 
 				&:nth-child(7) {
@@ -188,19 +257,29 @@
 					grid-row: 2;
 					justify-self: end;
 					margin-left: 0;
-					margin-right: -4px;
+					margin-right: 0;
 				}
 
 				&:nth-child(8) {
 					grid-column: 3 / -1;
 					grid-row: 3;
 					justify-self: end;
+					margin-right: 0;
 				}
 
 				&:nth-child(9) {
 					grid-column: 3 / -1;
 					grid-row: 4;
 					justify-self: end;
+					margin-right: 0;
+				}
+
+				&:nth-child(10) {
+					grid-column: 3 / -1;
+					grid-row: 5;
+					justify-self: end;
+					margin-right: 0;
+					margin-top: -10px;
 				}
 			}
 		}
@@ -211,8 +290,11 @@
 			padding: 4px;
 
 			&:hover {
-				color: var(--page-bg);
-				background-color: var(--accent);
+				color: var(--text-color);
+			}
+
+			@include mobile {
+				padding: 2px;
 			}
 		}
 
@@ -220,5 +302,44 @@
 
 	@include tablet {
 		row-gap: 5px;
+	}
+
+	.li_logo {
+		display: flex;
+		flex-direction: column;
+
+		&_text {
+			margin-top: 12px;
+			display: flex;
+			flex-direction: column;
+			gap: 6px;
+		}
+
+		& p {
+			font-weight: 500;
+			font-size: 16px;
+			line-height: 105%;
+			color: rgba(247, 246, 242, 0.6);
+			padding: 4px;
+		}
+
+		& .footer__link-logo:hover {
+			color: var(--page-bg);
+			background-color: transparent;
+		}
+	}
+
+	.li_subtitle {
+		font-weight: 500;
+		font-size: 14px;
+		line-height: 105%;
+		text-transform: uppercase;
+		color: var(--text-color);
+		padding: 4px;
+
+		@include mobile {
+			padding: 2px;
+			margin-left: 0;
+		}
 	}
 }
