--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -1,27 +1,24 @@
 .form {
 	font-family: var(--font-accent);
-	background-color: var(--accent);
 	position: relative;
 	width: 100vw;
-	max-width: 1600px;
-	padding: 50px 15px;
+	color: var(--text-color-dark);
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
 
 	@include mobile {
 		padding: 35px 10px;
 	}
 
 	&__title {
+		grid-column: 1 / -1;
+		display: grid;
+		grid-template-columns: repeat(4, 1fr);
 		position: relative;
-		font-weight: 600;
-		font-size: 80px;
-		line-height: 100%;
-		letter-spacing: -0.04em;
+		font-weight: 500;
+		font-size: 120px;
+		line-height: 105%;
 		text-transform: uppercase;
-		text-align: center;
-		margin: 0 auto;
-		color: var(--text-color);
-		padding: 10px 20px;
-		width: fit-content;
 		white-space: nowrap;
 		margin-bottom: 40px;
 
@@ -30,70 +27,15 @@
 			margin-bottom: 20px;
 			padding: 10px 10px;
 		}
-	}
 
-	.rect {
-		position: absolute;
-		width: 90px;
-		height: 20px;
-		border: 1px solid var(--text-color);
-
-		@include mobile {
-			width: 35px;
-			height: 10px;
-			// border: 2px solid var(--text-color);
+		& p:nth-child(1) {
+			grid-column: 1 / -1;
+			grid-row: 1;
 		}
 
-		&-top {
-			&-left {
-				top: 0;
-				left: 0;
-				border-bottom: none;
-				border-right: none;
-			}
-
-			&-mid {
-				top: 0;
-				left: 50%;
-				transform: translateX(-50%);
-				border-bottom: none;
-				border-left: none;
-				border-right: none;
-			}
-
-			&-right {
-				top: 0;
-				right: 0;
-				left: auto;
-				border-bottom: none;
-				border-left: none;
-			}
-		}
-
-		&-bottom {
-			&-left {
-				bottom: 0;
-				left: 0;
-				border-top: none;
-				border-right: none;
-			}
-
-			&-mid {
-				bottom: 0;
-				left: 50%;
-				transform: translateX(-50%);
-				border-top: none;
-				border-left: none;
-				border-right: none;
-			}
-
-			&-right {
-				bottom: 0;
-				right: 0;
-				left: auto;
-				border-top: none;
-				border-left: none;
-			}
+		& p:nth-child(2) {
+			grid-column: 2 / -1;
+			grid-row: 2;
 		}
 	}
 
@@ -104,7 +46,6 @@
 		line-height: 110%;
 		letter-spacing: -0.04em;
 		text-align: center;
-		color: var(--text-color);
 		margin: 0 auto;
 		margin-bottom: 40px;
 
@@ -115,17 +56,13 @@
 	}
 
 	.contact__form {
-		padding: 40px;
-		display: flex;
-		flex-direction: column;
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		grid-column: 1 / -1;
 		max-width: 548px;
 		margin: 0 auto;
 		border: 1px solid var(--page-bg);
 		gap: 10px;
-
-		@include mobile {
-			padding: 20px;
-		}
 
 		& input,
 		textarea {
@@ -158,10 +95,6 @@
 			}
 		}
 
-		& textarea {
-			height: 88px;
-		}
-
 		&-text {
 			color: rgba(255, 255, 255, 0.5);
 			font-weight: 400;
@@ -181,225 +114,6 @@
 				&:hover {
 					color: var(--text-color);
 				}
-			}
-		}
-	}
-
-	.bars_right {
-		position: absolute;
-		height: 40px;
-		width: 100%;
-
-		.bar {
-			width: 100%;
-			position: absolute;
-			background-color: red;
-			background-color: var(--page-bg);
-			height: 100%;
-
-			&_1 {
-				width: 20px;
-				right: 12%;
-			}
-
-			&_2 {
-				width: 16px;
-				right: 6%;
-			}
-
-			&_3 {
-				width: 8px;
-				right: 2%;
-			}
-
-			&_4 {
-				width: 4px;
-				right: 0%;
-			}
-		}
-	}
-
-	.bars_left {
-		position: absolute;
-		height: 40px;
-		width: 100%;
-
-		.bar {
-			width: 100%;
-			position: absolute;
-			background-color: red;
-			background-color: var(--page-bg);
-			height: 100%;
-
-			&_5 {
-				width: 20px;
-				left: 12%;
-			}
-
-			&_6 {
-				width: 16px;
-				left: 6%;
-			}
-
-			&_7 {
-				width: 8px;
-				left: 2%;
-			}
-
-			&_8 {
-				width: 4px;
-				left: 0%;
-			}
-		}
-	}
-
-	.bars_right {
-		position: absolute;
-		height: 40px;
-		width: 100%;
-
-		.bar {
-			width: 100%;
-			position: absolute;
-			background-color: red;
-			background-color: var(--page-bg);
-			height: 100%;
-
-			&_1 {
-				width: 20px;
-				right: 12%;
-			}
-
-			&_2 {
-				width: 16px;
-				right: 6%;
-			}
-
-			&_3 {
-				width: 8px;
-				right: 2%;
-			}
-
-			&_4 {
-				width: 4px;
-				right: 0%;
-			}
-		}
-	}
-
-	.bars_left {
-		position: absolute;
-		height: 40px;
-		width: 100%;
-
-		.bar {
-			width: 100%;
-			position: absolute;
-			background-color: red;
-			background-color: var(--page-bg);
-			height: 100%;
-
-			&_5 {
-				width: 20px;
-				left: 12%;
-			}
-
-			&_6 {
-				width: 16px;
-				left: 6%;
-			}
-
-			&_7 {
-				width: 8px;
-				left: 2%;
-			}
-
-			&_8 {
-				width: 4px;
-				left: 0%;
-			}
-		}
-	}
-
-	.form__btn {
-		position: relative;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		justify-self: end;
-		position: relative;
-		font-weight: 500;
-		font-size: 16px;
-		line-height: 100%;
-		letter-spacing: -0.04em;
-		text-transform: uppercase;
-		height: 40px;
-		color: var(--accent);
-		// background-color: var(--page-bg);
-		padding: 0;
-		width: 100%;
-		max-width: 469px;
-		margin-top: 20px;
-
-		@include mobile_small {
-			margin-top: 10px;
-		}
-
-		&:hover {
-			.bars_right {
-				.bar_1 {
-					animation: bars_right 4s infinite;
-				}
-
-				.bar_2 {
-					animation: bars_right 4s infinite;
-					animation-delay: -1s;
-				}
-
-				.bar_3 {
-					animation: bars_right 4s infinite;
-					animation-delay: -2s;
-				}
-
-				.bar_4 {
-					animation: bars_right 4s infinite;
-					animation-delay: -3s;
-				}
-			}
-
-			.bars_left {
-				.bar_5 {
-					animation: bars_left 4s infinite;
-				}
-
-				.bar_6 {
-					animation: bars_left 4s infinite;
-					animation-delay: -1s;
-				}
-
-				.bar_7 {
-					animation: bars_left 4s infinite;
-					animation-delay: -2s;
-				}
-
-				.bar_8 {
-					animation: bars_left 4s infinite;
-					animation-delay: -3s;
-				}
-			}
-		}
-
-		&-text {
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			height: 40px;
-			width: 100%;
-			max-width: 300px;
-			background-color: var(--page-bg);
-
-			@include mobile {
-				max-width: 260px;
 			}
 		}
 	}
