--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -6,10 +6,6 @@
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
 
-	@include mobile {
-		padding: 35px 10px;
-	}
-
 	&__title {
 		grid-column: 1 / -1;
 		display: grid;
@@ -23,9 +19,8 @@
 		margin-bottom: 40px;
 
 		@include mobile {
-			font-size: 30px;
+			font-size: 35px;
 			margin-bottom: 20px;
-			padding: 10px 10px;
 		}
 
 		& p:nth-child(1) {
@@ -36,6 +31,11 @@
 		& p:nth-child(2) {
 			grid-column: 2 / -1;
 			grid-row: 2;
+
+			@include mobile {
+				grid-column: 1 / -1;
+				grid-row: 2;
+			}
 		}
 	}
 
@@ -45,76 +45,122 @@
 		font-size: 16px;
 		line-height: 110%;
 		letter-spacing: -0.04em;
-		text-align: center;
-		margin: 0 auto;
 		margin-bottom: 40px;
 
 		@include mobile {
 			font-size: 14px;
 			margin-bottom: 15px;
+			grid-column: 1 / -1;
+		}
+	}
+
+	&__wrapper {
+		display: grid;
+		grid-template-columns: repeat(4, 1fr);
+		grid-column: 1 / -1;
+
+		& .text__subtitle {
+			font-weight: 500;
+			font-size: 16px;
+			line-height: 105%;
+			color: rgba(18, 18, 18, 0.7);
+			margin-bottom: 10px;
+
+			@include mobile {
+				font-size: 14px;
+				margin-bottom: 5px;
+			}
+		}
+
+		& .text__link {
+			cursor: pointer;
+			font-weight: 500;
+			font-size: 25px;
+			line-height: 105%;
+			text-transform: uppercase;
+			color: #0dc1c2;
+
+			@include mobile {
+				font-size: 15px;
+			}
 		}
 	}
 
 	.contact__form {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
-		grid-column: 1 / -1;
-		max-width: 548px;
+		grid-column: 3 / -1;
 		margin: 0 auto;
 		border: 1px solid var(--page-bg);
-		gap: 10px;
+		row-gap: 40px;
+
+		@include mobile {
+			grid-column: 1 / -1;
+			row-gap: 20px;
+			width: 100%;
+		}
 
 		& input,
 		textarea {
-			font-family: var(--font-accent);
 			font-weight: 400;
 			font-size: 16px;
 			line-height: 110%;
 			letter-spacing: -0.04em;
 			color: var(--text-color-dark);
 			background-color: var(--page-bg);
-			padding: 10px 20px;
 			resize: none;
 			border: none;
 			outline: none;
-
-			@include mobile {
-				padding: 12px;
-			}
+			padding: 2px 0 6px 0;
+			border-bottom: 1px solid rgba(18, 18, 18, 0.2);
+			justify-self: start;
+			align-self: start;
+			width: 95%;
+			height: 24px;
 
 			&:focus {
 				outline: none;
 			}
 
 			&::placeholder {
-				font-weight: 400;
+				font-weight: 500;
 				font-size: 16px;
-				line-height: 110%;
-				letter-spacing: -0.04em;
-				color: rgba(124, 0, 0, 0.5);
+				line-height: 105%;
+				color: rgba(18, 18, 18, 0.6);
+			}
+
+			@include mobile {
+				grid-column: 1 / -1;
+				width: 100%;
 			}
 		}
 
 		&-text {
-			color: rgba(255, 255, 255, 0.5);
-			font-weight: 400;
+			grid-column: 1 / -1;
+			font-weight: 500;
 			font-size: 14px;
-			line-height: 100%;
-			letter-spacing: -0.04em;
+			line-height: 105%;
+			color: rgba(18, 18, 18, 0.4);
+			margin-top: -20px;
 
 			@include mobile {
 				font-size: 12px;
+				margin-top: -5px;
 			}
 
 			& a {
 				cursor: pointer;
-				color: rgba(255, 255, 255, 0.5);
+				color: rgba(18, 18, 18, 0.4);
 				transition: color 0.2s ease-in;
 
 				&:hover {
-					color: var(--text-color);
+					color: var(--text-color-dark);
 				}
 			}
+		}
+
+		button {
+			grid-column: 1 / -1;
 		}
 	}
 }
