--- a/src/scss/blocks/_icons.scss
+++ b/src/scss/blocks/_icons.scss
@@ -37,3 +37,14 @@
 		height: 40px;
 	}
 }
+
+.icon--arrow {
+	stroke: var(--text-color-dark);
+	width: 16px;
+	height: 26px;
+
+	@include mobile {
+		width: 40px;
+		height: 40px;
+	}
+}
