--- a/src/scss/blocks/_reviews.scss
+++ b/src/scss/blocks/_reviews.scss
@@ -71,8 +71,11 @@
 			width: 100%;
 
 			& img {
+				border-radius: 90px;
+
 				@include mobile_small {
 					width: 100%;
+					border-radius: 30px;
 				}
 			}
 
