--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -51,6 +51,7 @@
 			font-size: 14px;
 			margin-bottom: 15px;
 			grid-column: 1 / -1;
+			width: 100%;
 		}
 	}
 
@@ -90,7 +91,6 @@
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
 		grid-column: 3 / -1;
-		margin: 0 auto;
 		border: 1px solid var(--page-bg);
 		row-gap: 40px;
 
@@ -136,6 +136,8 @@
 		}
 
 		&-text {
+			display: grid;
+			grid-template-columns: repeat(2, 1fr);
 			grid-column: 1 / -1;
 			font-weight: 500;
 			font-size: 14px;
@@ -144,8 +146,14 @@
 			margin-top: -20px;
 
 			@include mobile {
+				grid-template-columns: repeat(1, 1fr);
 				font-size: 12px;
 				margin-top: -5px;
+			}
+
+			& span {
+				width: 100%;
+				grid-column: 1 / -1;
 			}
 
 			& a {
