--- a/src/scss/blocks/_mobile-nav.scss
+++ b/src/scss/blocks/_mobile-nav.scss
@@ -25,6 +25,21 @@
 	}
 }
 
+.overlay {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100vw;
+	height: 100vh;
+	background-color: rgba(0, 0, 0, 0.7);
+	z-index: 95;
+	display: none;
+}
+
+.overlay.mobile-nav--open {
+	display: block;
+}
+
 .mobile-nav--open {
 	right: 0;
 }
