--- a/src/scss/blocks/_nav.scss
+++ b/src/scss/blocks/_nav.scss
@@ -101,11 +101,17 @@
 .no-scroll .nav__link {
 	transition: all 0.2s ease-in;
 	position: relative;
-	padding: 15px 0;
+	padding: 5px;
+	margin: 10px 0;
+	margin-left: -5px;
 
 	font-weight: 500;
 	font-size: 20px;
 	line-height: 105%;
 	text-transform: uppercase;
 	color: var(--text-color-dark);
+
+	&:hover {
+		color: var(--text-color-dark);
+	}
 }
