--- a/src/scss/blocks/_mobile-nav.scss
+++ b/src/scss/blocks/_mobile-nav.scss
@@ -3,7 +3,7 @@
 	top: 50%;
 	right: -150%;
 	width: 100%;
-	height: 88%;
+	height: calc(100% - 120px);
 	transform: translate(0%, -50%);
 	z-index: 99;
 
